--- a/playbooks/apache_install.yml
+++ b/playbooks/apache_install.yml
@@ -7,7 +7,7 @@
   - name: ensure apache is at the latest version
     yum: name=httpd state=latest
   - name: write the apache config file
-    template: src=./srv/httpd.j2 dest=/etc/httpd.conf
+    template: src=../srv/httpd.j2 dest=/etc/httpd.conf
     notify:
     - restart apache
   - name: ensure apache is running (and enable it at boot)
