--- a/production.ini
+++ b/production.ini
@@ -1,2 +1,5 @@
 [webservers]
-webserver1	ansible_host=172.21.15.175 ansible_ssh_private_key_file=./keys/vstacksprod.key
+webserver1	ansible_host=172.21.15.175
+
+[webservers:vars]
+ansible_ssh_private_key_file=./keys/vstacksprod.key
