--- a/production.ini
+++ b/production.ini
@@ -1,5 +1,6 @@
 [webservers]
 webserver1	ansible_host=172.21.15.175
+webserver2	ansible_host=172.21.15.178
 
 [webservers:vars]
 ansible_ssh_private_key_file=./keys/vstacksprod.key
