--- a/playbooks/apache_install.yml
+++ b/playbooks/apache_install.yml
@@ -1,6 +1,8 @@
 ---
 - name: Apache Installation on Web Servers
   hosts: webservers
+  become: yes
+  become_user: root
   gather_facts: true
   roles:
-  - { role: apache_installation }
+    - { role: apache_installation }
