--- a/playbooks/roles/apache_installation/tasks/ubuntu_apache.yml
+++ b/playbooks/roles/apache_installation/tasks/ubuntu_apache.yml
@@ -1,11 +1,38 @@
 ---
 - name: Apache Installation on Debian Family OS
-  apt: name=apache2 update_cache=yes state=latest
+  apt: 
+    update_cache: yes 
+    name: apache2 
+    state: latest
 
-- name: write the apache config file
+#- name: Disable Current MPM if mpm == event
+#  apache2_module:
+#    name: mpm_event
+#    state: absent
+#    force: True
+#    ignore_configcheck: True
+#  when: apache_mpm == 'worker'
+#
+#- name: Enable Worker MPM
+#  apache2_module:
+#    name: mpm_worker
+#    state: present
+#    force: True
+#    ignore_configcheck: True
+#  when: apache_mpm == 'worker'
+
+- name: write the apache mpm config file
+  template: 
+    src: debian_mpm.j2 
+    dest: /etc/apache2/mods-available/mpm_{{ apache_mpm }}.conf
+
+- name: write the apache port config file
   template: src=debian_ports.j2 dest=/etc/apache2/ports.conf
   notify:
     - restart apache on Debian OS
 
 - name: ensure apache is running (and enable it at boot)
-  service: name=apache2 state=started enabled=yes
+  service: 
+    name: apache2 
+    state: started 
+    enabled: yes
