--- a/playbooks/roles/apache_installation/tasks/centos_apache.yml
+++ b/playbooks/roles/apache_installation/tasks/centos_apache.yml
@@ -3,7 +3,7 @@
   yum: name=httpd state=latest
 
 - name: write the apache config file
-  template: src=redhat_httpd.j2 dest=/etc/httpd.conf
+  template: src=redhat_httpd.j2 dest=/etc/httpd/conf/httpd.conf
   notify:
     - restart apache on RedHat OS
 
@@ -16,7 +16,7 @@
   when: apache_mpm == "event"
 
 - name: Setting up MPM Values
-  template: src=mpm_values.j2 dest=/etc/httpd/conf.modules.d/{{ apache_mpm }}_mpm_values.conf
+  template: src=mpm_values.j2 dest=/etc/httpd/conf.modules.d/ansible_{{ apache_mpm }}_mpm_values.conf
 
 - name: ensure apache is running (and enable it at boot)
   service: name=httpd state=started enabled=yes
