Added MariaDB/MySQL Installation Role

--- a/playbooks/roles/apache_installation/defaults/main.yml
+++ b/playbooks/roles/apache_installation/defaults/main.yml
@@ -1,12 +1,24 @@
 ---
 # defaults file for apache_installation
+#apache_http_port: 80
+#apache_mpm: "worker"
+#apache_server_limit: 250
+#apache_start_servers: 10
+#apache_min_spare_threads: 75
+#apache_max_spare_threads: 250
+#apache_thread_limit: 10000
+#apache_thread_per_child: 1500
+#apache_max_request_workers: 9000
+#apache_max_connection_per_child: 1000
+#
+#Enabling below parameters for testing only
 apache_http_port: 80
 apache_mpm: "worker"
-apache_server_limit: 250
-apache_start_servers: 10
-apache_min_spare_threads: 75
-apache_max_spare_threads: 250
-apache_thread_limit: 10000
-apache_thread_per_child: 1500
-apache_max_request_workers: 9000
-apache_max_connection_per_child: 1000
+apache_server_limit: 50
+apache_start_servers: 2
+apache_min_spare_threads: 5
+apache_max_spare_threads: 10
+apache_thread_limit: 10
+apache_thread_per_child: 10
+apache_max_request_workers: 90
+apache_max_connection_per_child: 100
