--- a/playbooks/roles/apache_installation/tasks/RedHat.yml
+++ b/playbooks/roles/apache_installation/tasks/RedHat.yml
@@ -5,7 +5,7 @@
 - name: write the apache config file
   template: src=redhat_httpd.j2 dest=/etc/httpd/conf/httpd.conf
   notify:
-    - restart apache on RedHat OS
+    - Restart Apache on RedHat OS
 
 - name: Enable Worker MPM for Apache
   template: src=worker_mpm.j2 dest=/etc/httpd/conf.modules.d/00-mpm.conf
@@ -18,5 +18,26 @@
 - name: Setting up MPM Values
   template: src=mpm_values.j2 dest=/etc/httpd/conf.modules.d/ansible_{{ apache_mpm }}_mpm_values.conf
 
-- name: ensure apache is running (and enable it at boot)
-  service: name=httpd state=started enabled=yes
+- name: Allowing firewall ports for http
+  firewalld:
+    port: 80/tcp
+    permanent: true
+    state: enabled
+  notify:
+    - Restarting firewalld
+  tags: firewall
+
+- name: Allowing firewall ports for https
+  firewalld:
+    port: 443/tcp
+    permanent: true
+    state: enabled
+  notify:
+    - Restarting firewalld
+  tags: firewall
+
+- name: Ensure Apache is running and enable it at boot
+  systemd: 
+    name: httpd 
+    state: started 
+    enabled: yes
