--- a/playbooks/roles/prepare_server/tasks/RedHat.yml
+++ b/playbooks/roles/prepare_server/tasks/RedHat.yml
@@ -9,7 +9,9 @@
   yum:
     name: "{{ item }}"
     state: latest
+    update_cache: yes
   with_items: 
+    - epel-release
     - wget
     - vim
     - net-tools
@@ -40,7 +42,7 @@
     host: "{{ inventory_hostname }}"
     state: started 
     delay: 15 
-    timeout: 30
+    timeout: 60
   delegate_to: localhost
   become: false
   tags: reboot
