minor patch to install unsafe packages in ubuntu

--- a/playbooks/roles/prepare_server/tasks/Debian.yml
+++ b/playbooks/roles/prepare_server/tasks/Debian.yml
@@ -20,6 +20,7 @@
     - openssl
     - make
     - python-software-properties
+    - software-properties-common 
 
 - name: Allowing SSH service in ufw firewall
   ufw: 
