--- a/playbooks/roles/mariadb_installation/tasks/debian_mariadb_installation.yml
+++ b/playbooks/roles/mariadb_installation/tasks/debian_mariadb_installation.yml
@@ -5,6 +5,7 @@
     name: "{{ item }}"
     state: present
     update_cache: yes
+    allow_unauthenticated: yes
   with_items:
     - mariadb-server 
   register: _svc_mariadb
