--- a/production.ini
+++ b/production.ini
@@ -1,19 +1,20 @@
 [webservers]
 webserver1	ansible_host=172.21.15.175
-webserver2	ansible_host=172.21.15.177
-webserver3	ansible_host=172.21.15.176
-webserver4	ansible_host=172.21.15.178
-webserver4	ansible_host=172.21.15.178
+#webserver2	ansible_host=172.21.15.177
+#webserver3	ansible_host=172.21.15.176
+#webserver4	ansible_host=172.21.15.178
+#webserver4	ansible_host=172.21.15.178
 webserver5	ansible_host=172.21.15.180
-webserver6	ansible_host=172.21.15.183
-webserver7	ansible_host=172.21.15.181
-webserver8	ansible_host=172.21.15.184
-webserver9	ansible_host=172.21.15.182
-webserver10	ansible_host=172.21.15.185
-webserver11	ansible_host=172.21.15.189
-webserver12	ansible_host=172.21.15.188
-webserver13	ansible_host=172.21.15.186
-webserver14	ansible_host=172.21.15.187
+#webserver6	ansible_host=172.21.15.183
+#webserver7	ansible_host=172.21.15.181
+#webserver8	ansible_host=172.21.15.184
+#webserver9	ansible_host=172.21.15.182
+#webserver10	ansible_host=172.21.15.185
+#webserver11	ansible_host=172.21.15.189
+#webserver12	ansible_host=172.21.15.188
+#webserver13	ansible_host=172.21.15.186
+#webserver14	ansible_host=172.21.15.187
 
 [webservers:vars]
 ansible_ssh_private_key_file=~/keys/vstack-prod/vstacksprod.key
+#apache_mpm = event
