minor yaml changes for variables

--- a/playbooks/roles/prepare_server/tasks/RedHat.yml
+++ b/playbooks/roles/prepare_server/tasks/RedHat.yml
@@ -1,48 +1,47 @@
 ---
-- name: Updating server using 'yum update'
-  yum:
-    name: "*"
-    state: latest
-    update_cache: yes
+- block:
+    - name: Updating server using 'yum update'
+      yum:
+        name: "*"
+        state: latest
+        update_cache: yes
+      tags: yum_update
+    
+    - name: Installing some necessary packages
+      yum:
+        name: "{{ item }}"
+        state: latest
+        update_cache: yes
+      with_items: "{{ redhat.packages }}"
+      tags: basic_packages
+    
+    - name: Setting Up Selinux
+      selinux:
+        state: "{{ redhat.selinux.state }}"
+        policy: "{{ redhat.selinux.policy }}"
+      tags: selinux
 
-- name: Installing some necessary packages
-  yum:
-    name: "{{ item }}"
-    state: latest
-    update_cache: yes
-  with_items: 
-    - epel-release
-    - wget
-    - vim
-    - net-tools
-    - firewalld 
-    - telnet
-    - yum-utils
-    - gcc
-    - openssl-devel
-    - gcc-c++
-    - make
-
-- name: Starting firewalld service
-  service: 
-    name: firewalld
-    state: started
-    enabled: yes
-
-- name: Restarting Machine
-  shell: sleep 2 && shutdown -r now "Ansible updates triggered"
-  async: 1
-  poll: 0
-  become: true
-  ignore_errors: true
-  tags: reboot
-
-- name: Waiting for server to reboot and come back
-  wait_for: 
-    host: "{{ inventory_hostname }}"
-    state: started 
-    delay: 15 
-    timeout: 60
-  delegate_to: localhost
-  become: false
-  tags: reboot
+    - name: Starting firewalld service
+      systemd: 
+        name: firewalld
+        state: started
+        enabled: yes
+      tags: firewall
+    
+    - name: Restarting Machine
+      shell: sleep 2 && shutdown -r now "Ansible updates triggered"
+      async: 1
+      poll: 0
+      become: true
+      ignore_errors: true
+      tags: reboot
+    
+    - name: Waiting for server to reboot and come back
+      wait_for: 
+        host: "{{ inventory_hostname }}"
+        state: started 
+        delay: 15 
+        timeout: 60
+      delegate_to: localhost
+      become: false
+      tags: reboot
