--- a/playbooks/roles/prepare_server/defaults/main.yml
+++ b/playbooks/roles/prepare_server/defaults/main.yml
@@ -1,4 +1,34 @@
 ---
 # defaults file for roles/base
-selinux_status: disabled
+redhat:
+  packages:
+    - epel-release
+    - wget
+    - vim
+    - net-tools
+    - firewalld
+    - telnet
+    - yum-utils
+    - gcc
+    - openssl-devel
+    - gcc-c++
+    - make
+    - atop
 
+  selinux: 
+    state: enforcing
+    policy: targeted
+    
+
+debian:
+  packages:
+    - wget
+    - vim
+    - ufw
+    - telnet
+    - gcc
+    - openssl
+    - make
+    - python-software-properties
+    - software-properties-common
+    - atop
