--- a/playbooks/roles/prepare_server/tasks/RedHat.yml
+++ b/playbooks/roles/prepare_server/tasks/RedHat.yml
@@ -5,7 +5,13 @@
         name: "*"
         state: latest
         update_cache: yes
-      tags: yum_update
+        exclude: 
+          npm
+          nodejs
+      tags: 
+        - server_update
+        - yum_update
+      register: server_update
     
     - name: Installing some necessary packages
       yum:
@@ -28,13 +34,33 @@
         enabled: yes
       tags: firewall
     
+    - name: Allowing custom ssh firewalld port
+      firewalld: 
+        port: '{{ custom_ssh_port }}/tcp'
+        permanent: true
+        state: enabled
+      tags: firewall
+      notify: restart firewalld
+
+    - name: Allowing http firewalld service
+      firewalld: 
+        service: http
+        permanent: true
+        state: enabled
+      tags: firewall
+      notify: restart firewalld
+    
     - name: Restarting Machine
       shell: sleep 2 && shutdown -r now "Ansible updates triggered"
       async: 1
       poll: 0
       become: true
       ignore_errors: true
-      tags: reboot
+      tags: 
+        - reboot
+        - server_reboot
+      when: server_update.changed
+      register: server_reboot
     
     - name: Waiting for server to reboot and come back
       wait_for: 
@@ -45,3 +71,4 @@
       delegate_to: localhost
       become: false
       tags: reboot
+      when: server_reboot.changed
