--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -1,5 +1,6 @@
 ---
+- include: repo_install.yml
 - include: prepare_server.yml
-- include: apache_install.yml
-- include: php_install.yml
-- include: mariadb_install.yml
+#- include: apache_install.yml
+#- include: php_install.yml
+#- include: mariadb_install.yml
