--- a/playbooks/roles/debug_run/tasks/main.yml
+++ b/playbooks/roles/debug_run/tasks/main.yml
@@ -5,5 +5,5 @@
 
 - name: debug test for server
   debug: 
-    msg: "Inventory {{ inventory_hostname }} hast hostname {{ ansible_hostname }}"
+    msg: Partition UUID is {{ hostvars.webserver1.ansible_devices.vda.partitions.vda1.uuid }}
   
