--- a/ansible.cfg
+++ b/ansible.cfg
@@ -84,7 +84,7 @@ hash_behaviour = merge
 #fact_caching = memory
 
 
-#retry_files_enabled = False
+retry_files_enabled = False
 #retry_files_save_path = ~/.ansible-retry
 
 
