--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -1,6 +1,7 @@
 ---
 - include: repo_install.yml
 - include: prepare_server.yml
-#- include: apache_install.yml
-#- include: php_install.yml
-#- include: mariadb_install.yml
+- include: netdata_installation.yml
+- include: apache_install.yml
+- include: php_install.yml
+- include: mariadb_install.yml
