--- a/playbooks/roles/repo_installation/tasks/main.yml
+++ b/playbooks/roles/repo_installation/tasks/main.yml
@@ -5,4 +5,4 @@
     name: epel-release
     state: present
     update_cache: yes
-  when: ansible_distribution == "CentOS" and ansible_distribution_major_version == "7"
+  when: ansible_distribution == "RedHat" and ansible_distribution_major_version == "7"
