added mariadb and galera installation roles and few other minor optimizations

--- a/playbooks/mariadb_install.yml
+++ b/playbooks/mariadb_install.yml
@@ -1,6 +1,6 @@
 ---
 - name: MariaDB Installation
-  hosts: webservers
+  hosts: all
   become: True
   roles:
     - { role: mariadb_installation }
