--- a/playbooks/roles/galera-installation/defaults/main.yml
+++ b/playbooks/roles/galera-installation/defaults/main.yml
@@ -15,4 +15,11 @@ wsrep_retry_autocommit: 1
 wsrep_auto_increment_control: 1
 wsrep_drupal_282555_workaround: 0
 wsrep_causal_reads: 0
-
+binlog_format: ROW
+binlog_row_event_max_size: 4M
+binlog_cache_size: 4M
+innodb_autoinc_lock_mode: 2
+innodb_locks_unsafe_for_binlog: 1
+innodb_file_per_table: on
+innodb_doublewrite: on
+innodb_flush_log_at_trx_commit: 2
