--- a/playbooks/roles/mariadb_installation/defaults/main.yml
+++ b/playbooks/roles/mariadb_installation/defaults/main.yml
@@ -6,20 +6,12 @@ collation_server: utf8_general_ci
 init_connect: "'SET NAMES utf8'"
 character_set_server: utf8
 default_storage_engine: innodb
-binlog_format: ROW
-binlog_row_event_max_size: 4M
-binlog_cache_size: 4M
-innodb_autoinc_lock_mode: 2
-innodb_locks_unsafe_for_binlog: 1
 mysql_datadir: /var/lib/mysql
 innodb_file_per_table: on
-innodb_doublewrite: on
-innodb_flush_log_at_trx_commit: 2
 innodb_buffer_pool_size: 256M
 innodb_flush_method: O_DIRECT
 innodb_log_file_size: 64M
 innodb_log_buffer_size: 64M
-mysql_tmp_store: /run/mysql_tmp
 key_buffer: 64M
 join_buffer_size: 4M
 read_buffer_size: 4M
@@ -40,3 +32,4 @@ slow_query_log: 1
 long_query_time: 1
 log_queries_not_using_indexes: 1
 max_connections: 5000
+error_logs: /var/log/mysql/mysql_error.log
