--- a/playbooks/roles/mariadb_installation/defaults/main.yml
+++ b/playbooks/roles/mariadb_installation/defaults/main.yml
@@ -12,6 +12,7 @@ innodb_buffer_pool_size: 256M
 innodb_flush_method: O_DIRECT
 innodb_log_file_size: 64M
 innodb_log_buffer_size: 64M
+max_allowed_packet: 1024M
 key_buffer: 64M
 join_buffer_size: 4M
 read_buffer_size: 4M
@@ -22,8 +23,6 @@ myisam_sort_buffer_size: 64M
 table_cache: 1024
 thread_cache_size: 286
 interactive_timeout: 25
-wait_timeout: 1800
-connect_timeout: 10
 query_cache_limit: 1M
 query_cache_size: 16M
 query_cache_type: 1
@@ -32,4 +31,11 @@ slow_query_log: 1
 long_query_time: 1
 log_queries_not_using_indexes: 1
 max_connections: 5000
-error_logs: /var/log/mysql/mysql_error.log
+error_logs: /var/lib/mysql/mysql_error.log
+connect_timeout: 1000000
+wait_timeout: 1000000
+net_write_timeout: 1000000
+interactive_timeout: 1000000
+net_buffer_length: 200M
+net_read_timeout: 1000000
+
