minor modifcation to prepare server role

--- a/playbooks/roles/prepare_server/tasks/RedHat.yml
+++ b/playbooks/roles/prepare_server/tasks/RedHat.yml
@@ -12,7 +12,10 @@
         - server_update
         - yum_update
       register: server_update
-    
+
+    - name: checking for any unfinished / pending yum transactions
+      command: yum-complete-transaction --cleanup-only 
+
     - name: Installing some necessary packages
       yum:
         name: "{{ item }}"
@@ -20,6 +23,9 @@
         update_cache: yes
       with_items: "{{ redhat.packages }}"
       tags: basic_packages
+
+    - name: checking for any unfinished / pending yum transactions
+      command: yum-complete-transaction
     
     - name: disabling postfix service - user can enable if required
       systemd:
