--- a/ansible.cfg
+++ b/ansible.cfg
@@ -108,12 +108,12 @@ retry_files_enabled = False
 
 [ssh_connection]
 
-#ssh_args = -o ControlMaster=auto -o ControlPersist=60s
+ssh_args = -o ControlMaster=auto -o ControlPersist=30m
 
 # control_path = %(directory)s/%%h-%%r
 #control_path = %(directory)s/ansible-ssh-%%h-%%p-%%r
 
-#pipelining = False
+pipelining = True
 
 #scp_if_ssh = True
 
