--- a/playbooks/roles/mariadb_installation/defaults/main.yml
+++ b/playbooks/roles/mariadb_installation/defaults/main.yml
@@ -13,7 +13,7 @@ innodb_flush_method: O_DIRECT
 innodb_log_file_size: 64M
 innodb_log_buffer_size: 64M
 max_allowed_packet: 1024M
-key_buffer: 64M
+key_buffer_size: 64M
 join_buffer_size: 4M
 read_buffer_size: 4M
 sort_buffer_size: 4M
@@ -35,6 +35,6 @@ connect_timeout: 1000000
 wait_timeout: 1000000
 net_write_timeout: 1000000
 interactive_timeout: 1000000
-net_buffer_length: 200M
+net_buffer_length: 1048576
 net_read_timeout: 1000000
 
