--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -1,8 +1,8 @@
 ---
-#- include: repo_install.yml
-#- include: prepare_server.yml
-- include: netdata_installation.yml
-#- include: apache_install.yml
-#- include: php_install.yml
-- include: mariadb_install.yml
-- include: galera_installation.yml
+- import_playbook: repo_install.yml
+- import_playbook: prepare_server.yml
+- import_playbook: netdata_installation.yml
+#- import_playbook: apache_install.yml
+#- import_playbook: php_install.yml
+- import_playbook: mariadb_install.yml
+- import_playbook: galera_installation.yml
