--- a/playbooks/roles/prepare_server/tasks/RedHat.yml
+++ b/playbooks/roles/prepare_server/tasks/RedHat.yml
@@ -75,6 +75,39 @@
         state: enabled
       tags: firewall
       notify: restart firewalld
+
+    - name: generating random routing table number
+      set_fact:
+        table_num: "{{ 100 | random(start=20) }}"
+      run_once: yes
+
+    - name: generating randome priority for route
+      set_fact:
+        priority: "{{ 500 | random(start=100) }}"
+      run_once: yes
+
+    - name: creating route entries for nic interface
+      template:
+        src: route.j2
+        dest: /etc/sysconfig/network-scripts/route-{{ item }}
+      with_items: "{{ ansible_interfaces[1:] }}"
+      when:
+        - item == 'eth0'
+
+    - name: creating rule table for nic interface
+      template:
+        src: rule.j2
+        dest: /etc/sysconfig/network-scripts/rule-{{ item }}
+      with_items: "{{ ansible_interfaces[1:] }}"
+      when:
+        - item == 'eth0'
+
+    - name: creating interface files for extra nics
+      template:
+        src: nic.j2
+        dest: /etc/sysconfig/network-scripts/ifcfg-{{ item }}
+      with_items: "{{ ansible_interfaces[1:] }}"
+      tags: nics
     
     - name: Restarting Machine
       shell: sleep 2 && shutdown -r now "Ansible updates triggered"
